# impop

./: .gitignore  README.md  getting-started.md  impop.cabal  stack.yaml
app/: Main.hs  TestCurveArrangement.hs  TestDynamicPSD.hs  TestLabelPipeline.hs
ipe/: drop.ipe  drop.planar.ipe  eye.ipe  eye.planar.ipe  fish.ipe  fish.planar.ipe  hut.ipe  hut.planar.ipe  lens.ipe  lens.planar.ipe  ring.ipe  ring.planar.ipe
src/: Behaviour.hs  Convert.hs  CurveArrangement.hs  Curves.hs  Draw.hs  Force.hs  Glossify.hs  LibMain.hs  Nonogram.hs  OldTests.hs  PSDGlossApp.hs  Popular.hs  Test.hi  Test.hs  Test2.hs
src/Algorithms/Geometry/: Cluster.hs  Misc.hs  Snap.hs
src/Algorithms/Geometry/CurveArrangement/: BentleyOttmann.hs  Types.hs
src/CurveArrangement/: Basic.hs  Construct.hs  Dynamic.hs  ForceDirectedStubs.hs  Ipe.hs  Loader.hs  Puz.hs  Selectable.hs  Types.hs  Visible.hs
src/Data/Geometry/PlanarSubdivision/: ForceDirected.hs  More.hs
src/Eva/: SATLabeling.hs
src/Graphics/Geometry/: Gloss.hs  Rasterific.hs
src/Misc/: Ipe.hs  SpanningTree.hs  Time.hs
src/Nonogram/: Ipe.hs  PathType.hs  Puz.hs
src/PP/: Puz.hs
src/PSDGlossApp/: Common.hs  Editable.hs  Forcible.hs  Selectable.hs  Traceable.hs  Visible.hs
